[gd_scene load_steps=3 format=3 uid="uid://ilcisjmvb23h"]

[ext_resource type="Script" path="res://scenes/overworld/gui/components/item_entry.gd" id="1_dgji7"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_7t0qy"]
size = Vector2(16, 16)

[node name="ItemEntry" type="HBoxContainer"]
theme_override_constants/separation = 24
script = ExtResource("1_dgji7")

[node name="BtnAction" type="Button" parent="."]
layout_mode = 2
text = "Drop"

[node name="Icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_7t0qy")
expand_mode = 2

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Item Name"

[connection signal="pressed" from="BtnAction" to="." method="_on_btn_action_pressed"]
